--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     
     <h2 id="contact">Contact</h2>
     <div>
+      <textarea placeholder="Your Name"></textarea>
       <textarea placeholder="Your email"></textarea>
       <button>Submit</button>
     </div>    
